fix poetry install for windows?

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,8 @@ jobs:
         with:
           python-version: '3.12'
 
-      - name: Install Poetry
+      - name: Install Poetry (Linux/macOS)
+        if: matrix.os != 'windows-2025'
         uses: snok/install-poetry@v1
         with:
           version: 2.2.1
@@ -35,6 +36,20 @@ jobs:
           virtualenvs-in-project: true
           virtualenvs-path: .venv
           installer-parallel: true
+
+      - name: Install Poetry via pipx (Windows)
+        if: matrix.os == 'windows-2025'
+        shell: pwsh
+        run: |
+          # Upgrade pip, install pipx for the current user, ensure pipx path is set,
+          # then install Poetry via pipx so Poetry is available for subsequent steps.
+          & python -m pip install --upgrade pip
+          & python -m pip install --user pipx
+          & python -m pipx ensurepath
+          & python -m pipx install poetry
+          # Compute the user scripts directory (where pipx places executables) and add it to GITHUB_PATH
+          $path = (& python -c "import site, os; print(os.path.join(site.getuserbase(), 'Scripts'))")
+          Add-Content -Path $env:GITHUB_PATH -Value $path
 
       #----------------------------------------------
       #       load cached venv if cache exists per https://github.com/marketplace/actions/install-poetry-action
