--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,6 +34,22 @@
             ]
         },
         {
+            "name": "Python Debugger: starbash process",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "starbash.main",
+            "console": "integratedTerminal",
+            "python": "${workspaceFolder}/.vscode/get_poetry_python.sh",
+            "justMyCode": false,
+            "args": [
+                "--debug",
+                "process",
+                "siril",
+                "5",
+                "/tmp/sir1"
+            ]
+        },
+        {
             "name": "Python Debugger: processing script",
             "type": "debugpy",
             "request": "launch",
