--- a/doc/toml/example/master-repo/starbash.toml
+++ b/doc/toml/example/master-repo/starbash.toml
@@ -10,4 +10,4 @@
 [repo]
 kind = "master"
 
-relative = "{sessionid}/{imagetyp}/*_{sessionconfig}_*.fit*"
+relative = "{instrument}/{date}/{imagetyp}/{sessionconfig}.fits"
