--- a/src/starbash/recipes/master_bias/starbash.toml
+++ b/src/starbash/recipes/master_bias/starbash.toml
@@ -36,6 +36,15 @@ input.required = true # Is at least one input file required?  If true, we will s
 #siril_run_in_temp_dir(frames, ...
 when = "setup.masters" # run when master biases are regenerated
 
+# Based on the following definitions in this toml file...
+output.dest = "repo" # write to a particular repo
+output.type = "master" # write output to the special masters repo
+# the following fields will be auto populated in the context before entry:
+# context.output.root_path - points to the base of the destination repo
+# context.output.base_path - the full filepath to write the output file to **excluding the suffix**
+# context.output.suffix - the suffix to append to the output file (e.g. .fits or .fit.gz)
+# context.output.full_path - the full filepath to write the output file to (including suffix)
+
 # The following constants are auto defined before running the tool
 # context.process_dir (points to the session specific semi-persistent local dir for that sessions written/read data files)
 # context.masters (FIXME) - need to find this name dynamically by looking for a suitable writable repo
@@ -49,7 +58,7 @@ when = "setup.masters" # run when master biases are regenerated
 #
 # with a path like "{instrument}/{date}/{imagetyp}/{sessionconfig}.fits"
 # this path comes from master_repo.relative
-# context.output = "{instrument}/{date}/{imagetyp}/{sessionconfig}.fits"
+# context.output = "{output.root}/{instrument}/{date}/{imagetyp}/{sessionconfig}.fits"
 
 
 script = '''
