--- a/src/starbash/recipes/master_bias/starbash.toml
+++ b/src/starbash/recipes/master_bias/starbash.toml
@@ -36,7 +36,7 @@ input.required = true # Is at least one input file required?  If true, we will s
 #siril_run_in_temp_dir(frames, ...
 when = "setup.masters" # run when master biases are regenerated
 
-# Based on the following definitions in this toml file...
+# Based on the following definitions in the stage toml file...
 output.dest = "repo" # write to a particular repo
 output.type = "master" # write output to the special masters repo
 
