--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -75,8 +75,7 @@
                 "--debug",
                 "repo",
                 "add",
-                "--master",
-                "/tmp/repo/master"
+                "./images/from_astroboy"
             ]
         },
         {
